added links to current homepage and new blog

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>I'm new to this, and haven't added anything worthwhile yet...</p>
+<p>Someday I might move my homepage to github. For now it's <a href="http://www.geo.cornell.edu/eas/gstudent/sth54/">here</a> </p>
+
+<p>I also have a webblog <a href="https://github.com/scottyhq/blog">here</a> </p>
+
+
+
       </section>
     </div>
 
