--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Scottyhq.github.io</title>
+    <title>Scott Henderson</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/scottyhq">View on GitHub</a>
 
-          <h1 id="project_title">Scottyhq.github.io</h1>
-          <h2 id="project_tagline">My website</h2>
+          <h1 id="project_title">Scott's New Website</h1>
+          <!--<h2 id="project_tagline">My website</h2> -->
 
         </header>
     </div>
