--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h3> Welcome! </h3>
 
 <p>Someday I might move my homepage to github. For now it's <a href="http://www.geo.cornell.edu/eas/gstudent/sth54/">here</a> </p>
 
