fixed webblog typo and link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <p>Someday I might move my homepage to github. For now it's <a href="http://www.geo.cornell.edu/eas/gstudent/sth54/">here</a> </p>
 
-<p>I also have a webblog <a href="https://github.com/scottyhq/blog">here</a> </p>
+<p>I also have a weblog <a href="https://scottyhq.github.io/blog">here</a> </p>
 
 
 
@@ -51,7 +51,7 @@
           </script>
           <script type="text/javascript">
             try {
-              var pageTracker = _gat._getTracker("UA-16133359-2");
+              var pageTracker = _gat._getTracker("UA-16133359-1");
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
