--- a/pages/publications.html
+++ b/pages/publications.html
@@ -26,6 +26,21 @@
     <p>This is a chronological list of published peer-reviewed journal articles I've either authored or co-authored:</p>
 <ul>
 <li>
+<p>Krauss, Z. et. al. (In Press) Seismology in the cloud for template matching and machine-learning earthquake detection. Seismica.</p>
+</li>
+<li>
+<p>Decter-Frain, A. et. al. (In Press) Comparing Methods for Estimating Demographics in Racially Polarized Voting Analyses. Sociological Methods and Research.</p>
+</li>
+<li>
+<p>Eiden, E. et. al (2023) Multiple spatial and temporal scales of deformation from geodetic monitoring point to active transcrustal magma system at Uturuncu volcano, Bolivia. Geosphere (2023) 19 (2): 370–382. https://doi.org/10.1130/GES02520.1 </p>
+</li>
+<li>
+<p>Shean et al., (2023). SlideRule: Enabling rapid, scalable, open science for the NASA ICESat-2 mission and beyond. Journal of Open Source Software, 8(81), 4982, https://doi.org/10.21105/joss.04982  </p>
+</li>
+<li>
+<p>Bhushan, S. et. al. (2020) Automated digital elevation model (DEM) generation from very-high-resolution Planet SkySat triplet stereo and video imagery ISPRS Journal of Photogrammetry and Remote Sensing. <a href="https://doi.org/10.1016/j.isprsjprs.2020.12.012">doi:10.1016/j.isprsjprs.2020.12.012</a></p>
+</li>
+<li>
 <p>Bhushan, S. et. al. (2020) Automated digital elevation model (DEM) generation from very-high-resolution Planet SkySat triplet stereo and video imagery ISPRS Journal of Photogrammetry and Remote Sensing. <a href="https://doi.org/10.1016/j.isprsjprs.2020.12.012">doi:10.1016/j.isprsjprs.2020.12.012</a></p>
 </li>
 <li>
